welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:10: error: ')' expected but integer literal found.
for (i <- to 8) {move()} 
             ^Program:12: error: illegal start of simple expression
}
^